[package]
name = "cabin-temp-logger"
version = "0.1.0"
authors = ["Eirik S. Morland <eirik@morland.no>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
openssl = { version = "0.10", features = ["vendored"] }
